# billo

./: .gitignore  ARCHITECTURE.md  index.html  package-lock.json  package.json
.omo/run-continuation/: ses_134d5a2b1ffe1RiNecQX6MPpZ4.json  ses_134e18f8dffettnT0wQmbNvS5L.json
docs/superpowers/specs/: 2026-05-24-postbill-design.md
prototype/: index.html
src/: App.tsx  index.css  main.tsx  theme.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  db.rs  gmail.rs  lib.rs  main.rs  parser.rs
src-tauri/tao-patched/src/platform_impl/linux/: event_loop.rs  mod.rs  portal.rs  window.rs
src/components/: Layout.tsx
src/components/shared/: ChipFilter.tsx  Heatmap.tsx  Pagination.tsx
src/components/ui/: card.tsx  dialog.tsx  select.tsx  table.tsx  toast.tsx
src/lib/: api.ts  bank.ts  toast-store.ts
src/pages/Cards/: CardDetail.tsx  index.tsx
src/pages/Dashboard/: index.tsx
src/pages/Emails/: index.tsx
src/pages/Settings/: index.tsx
src/pages/Statistics/: index.tsx
src/pages/Templates/: index.tsx
src/pages/Transactions/: index.tsx
src/store/: index.ts
src/types/: index.ts
