[package]
name = "billo-app"
version = "0.1.0"
description = "招商银行信用卡账单统计器"
authors = ["yangcc"]
edition = "2021"

[lib]
name = "billo_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
scraper = "0.21"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"] }
tokio = { version = "1", features = ["full"] }
csv = "1.3"
dirs = "6"
log = "0.4"
env_logger = "0.11"
base64 = "0.22"
tiny_http = "0.12"

